<resources>
    <string name="app_name">Comandas</string>
    <string name="section_tabs">Secciones</string>
    <string name="orders">Comandas</string>
    <string name="ready">Preparados</string>
    <string name="records">Historial</string>
    <string name="help">Ayuda</string>
    <string name="suggestions">Sugerencias</string>
    <string name="sections">Secciones</string>
    <string name="settings">Configuración</string>
    <string name="suggestions_detail">¡Consulta los platos más populares y los platos destacados del restaurante!</string>
    <string name="category">Categorías</string>
    <string name="menu">Menús</string>
    <string name="observaciones">Observaciones</string>
    <string name="will_sent_kitchen">Se envirá a cocina</string>
    <string name="extras">Extras</string>
    <string name="extended_fab_content_desc">Icono flotante para añadir articulo a la comanda</string>
    <string name="add">Añadir</string>
    <string name="share">Compartir</string>
    <string name="print">Imprimir</string>
    <string name="send">Enviar</string>
    <string name="take_order">Tomar comanda</string>
    <string name="price">%1s €</string>
    <string name="number_articles">%1s artículos</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="empty_order">Comanda vacía</string>
    <string name="empty_order_msg">La comanda está vacía. Añade algún artículo antes de enviarla a cocina.</string>
    <string name="same_order">No hay cambios</string>
    <string name="same_order_msg">No se ha modificado la comanda. Por favor, modifica la comanda antes de enviarla a cocina.</string>
    <string name="changes_not_saved">Hay cambios sin guardar</string>
    <string name="changes_not_saved_msg">Se han realizado cambios en la comanda. ¿Desea enviarlos a cocina?</string>
    <string name="sent_error">No se pudo enviar la comanda</string>
    <string name="retry">Reintentar</string>
    <string name="reorder">ORDENAR</string>
    <string name="hide">OCULTAR</string>
    <string name="waiter">Camarero</string>
    <string name="results_title">RESULTADOS</string>
    <string name="date">Fecha</string>
    <string name="init_hour">Hora inicio: %1s</string>
    <string name="show_date">Fecha: %1s</string>
    <string name="section">Sección: %1s</string>
    <string name="table">Mesa: %1s</string>
    <string name="end_hour">Hora fin: %1s</string>
    <string name="content_title">CONTENIDO</string>
    <string name="price_title">PRECIO</string>
    <string name="cost_title">IMPORTE</string>
    <string name="ready_articles_title">ARTÍCULOS LISTOS PARA SERVIR</string>
    <string name="show_section">Sección: %1s</string>
    <string name="show_hour">Hora: %1s</string>
    <string name="order_details">Detalles comanda</string>
    <string name="record_order_title">Historial de comandas</string>
    <string name="waiters">Camareros</string>
    <string name="select_date">Seleccionar fecha</string>
    <string name="deselect">Deseleccionar</string>
    <string name="no_results_found">No hay resultados.</string>
    <string name="problem_ocurred">Hubo un problema.</string>
    <string name="try_later">Reintentelo más tarde.</string>
    <string name="most_ordered_articles">Platos más pedidos</string>
    <string name="prominent_dishes">Platos destacados</string>
    <string name="serve_article">Servir artículo</string>
    <string name="serve_article_msg">¿Deseas marcar como servido %1s de %2s?</string>
    <string name="served_all_articles">Todos los artículos están servidos</string>
    <string name="available_table">Mesa disponible</string>
    <string name="taken_table">Mesa atendida</string>
    <string name="ready_articles">Hay artículos preparados</string>
    <string name="ordered_article">Artículo pedido</string>
    <string name="preparing_article">Artículo en preparación</string>
    <string name="ready_article">Artículo preparado</string>
    <string name="served_article">Artículo servido</string>
    <string name="finish_order">Finalizar</string>
    <string name="help_guide">Guía de ayuda</string>
    <string name="num_selected">%1$s seleccionadas</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="can_not_sign_in">No se ha podido iniciar sesión</string>
    <string name="ready_articles_help">Desplaza un artículo a la derecha para servirlo.</string>
</resources>