<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ordersFragment"
        android:checkable="true"
        android:checked="true"
        android:contentDescription="@string/orders"
        android:icon="@drawable/order"
        android:title="@string/orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/suggestionsFragment"
        android:checkable="true"
        android:contentDescription="@string/suggestions"
        android:icon="@drawable/suggestions"
        android:title="@string/suggestions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sectionsFragment"
        android:checkable="true"
        android:contentDescription="@string/sections"
        android:icon="@drawable/sections"
        android:title="@string/sections"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:checkable="true"
        android:contentDescription="@string/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
</menu>