<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:contentDescription="@string/share"
        android:icon="@drawable/share"
        android:title="@string/share"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/print"
        android:contentDescription="@string/print"
        android:icon="@drawable/print"
        android:title="@string/print"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/send"
        android:contentDescription="@string/send"
        android:icon="@drawable/send"
        android:title="@string/send"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
</menu>