<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_nav"
    app:startDestination="@id/ordersFragment">
    <fragment
        android:id="@+id/ordersFragment"
        android:name="tfg.aperher.comandas.presentation.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/sectionsFragment"
        android:name="tfg.aperher.comandas.presentation.sectionsmanagement.SectionsFragment"
        android:label="@string/sections"
        tools:layout="@layout/fragment_sections"/>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="tfg.aperher.comandas.presentation.orders.recordsorders.orderdetails.OrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_order_details">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>
</navigation>