<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/section"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_table_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                app:layout_constraintTop_toBottomOf="@id/tv_section"
                app:layout_constraintStart_toStartOf="@id/tv_section"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/show_date"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_section" />

            <TextView
                android:id="@+id/tv_init_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init_hour"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <TextView
                android:id="@+id/tv_end_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_hour"
                app:layout_constraintTop_toBottomOf="@id/tv_init_hour"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_title"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/price_title"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cost_title"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_hour" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_articles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:itemCount="4"
                tools:listitem="@layout/item_article_order" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>