<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:layout_width="300dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView7"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:tint="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:srcCompat="@drawable/table" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="false"
        android:text="@string/available_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView8"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:tint="@color/orangeTableState"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView7"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:srcCompat="@drawable/table" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/taken_table"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView9"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:tint="@color/greenTableState"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView8"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:srcCompat="@drawable/table" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/ready_articles"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView6"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:tint="@color/greenTableState"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView9"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:srcCompat="@drawable/checklist" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/served_all_articles"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="?attr/colorSurfaceContainerHigh"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="@color/md_theme_light_onSurface"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView6"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:text="1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:singleLine="false"
        android:text="@string/ordered_article"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/orangeArticleState"
        android:gravity="center"
        android:text="1"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="@color/md_theme_light_onSurface"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/preparing_article"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/greenArticleState"
        android:gravity="center"
        android:text="1"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="@color/md_theme_light_onSurface"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/ready_article"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/greenArticleState"
        android:gravity="center"
        android:text="1"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="@color/md_theme_light_onSurface"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <View
        android:id="@+id/served"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:singleLine="false"
        android:text="@string/served_article"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>