<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorSurfaceContainer">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_article"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="?attr/colorSurfaceContainerHigh" />

                <TextView
                    android:id="@+id/tv_article_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:justificationMode="inter_word"
                    tools:text="Blabla blabla blabla blabla bla bla bla blablaa aaaa aaaaaa aaa aaaaaa aaaaa blab lbala blabla blalalba albalb"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/tv_price_article"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAppearance="?attr/textAppearanceHeadlineLarge"
                        android:textColor="?attr/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_remove_article"
                        style="?attr/materialIconButtonStyle"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="?attr/colorPrimary"
                        app:icon="@drawable/remove"
                        app:iconGravity="textStart"
                        app:iconTint="?attr/colorOnPrimary"
                        app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        tools:text="0"
                        android:textAppearance="?attr/textAppearanceTitleLarge"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_add_article"
                        app:layout_constraintEnd_toStartOf="@+id/btn_add_article"
                        app:layout_constraintTop_toTopOf="@+id/btn_add_article" />

                    <Button
                        android:id="@+id/btn_add_article"
                        style="?attr/materialIconButtonStyle"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:backgroundTint="?attr/colorPrimary"
                        app:icon="@drawable/add"
                        app:iconGravity="textStart"
                        app:iconTint="?attr/colorOnPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/observaciones"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:endIconMode="clear_text"
                    app:helperText="@string/will_sent_kitchen"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/sheet">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/extras"
                    android:textAppearance="?attr/textAppearanceTitleLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_extras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_article" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/extended_fab_content_desc"
        android:text="@string/add"
        android:textColor="?attr/colorOnPrimary"
        app:icon="@drawable/add"
        app:iconTint="?attr/colorOnPrimary" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
